Fix print on iOS

--- a/scss/externs/_ol.scss
+++ b/scss/externs/_ol.scss
@@ -124,6 +124,10 @@ button.ol-zoom-out {
   text-align: center;
 }
 
+.ol-scale-bar-inner {
+  display: flex;
+}
+
 .ol-scale-singlebar-even{
   background-color: #000000;
 }
